# arc-boost

./: .gitignore  README.md
arcboost/: CMakeLists.txt  CMakeSettings.json
arcboost/arcboost/: CMakeLists.txt  arcboost.cpp  arcboost.h  pygeometry.cpp  pygeometry.h
deploy/: arcintegration.ConvexHullTool.pyt.xml  arcintegration.pyt  arcintegration.pyt.xml
deploy/geospatial/: __init__.py
